src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_Ops_New_Segment__c</fullName>
        <description>Ops New Segment pulled in from account</description>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.Account.Ops_new_segment__c,IF(NOT(ISBLANK(LeadId)),Lead.Account__r.Ops_new_segment__c,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Ops New Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.Account_Safe_ID__c, 
IF(NOT(ISBLANK(LeadId)),Lead.Account_Safe_ID__c, 
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status_Sync__c</fullName>
        <description>What type the account was when the response was generated or udpated for active responses.</description>
        <inlineHelpText>What type the account was when the response was generated or udpated for active responses.</inlineHelpText>
        <label>Account Status (Sync)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Driver__c</fullName>
        <description>Party responsible for driving attendee to event</description>
        <inlineHelpText>Party responsible for driving attendee to event</inlineHelpText>
        <label>Attendance Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahead</fullName>
                </value>
                <value>
                    <fullName>CDI Southeast</fullName>
                </value>
                <value>
                    <fullName>CDW Corporation [Partner]</fullName>
                </value>
                <value>
                    <fullName>Computer Design and Integration [Partner]</fullName>
                </value>
                <value>
                    <fullName>Cumberland Group</fullName>
                </value>
                <value>
                    <fullName>Data Blue</fullName>
                </value>
                <value>
                    <fullName>Datalink Corporation</fullName>
                </value>
                <value>
                    <fullName>DecisionFocus</fullName>
                </value>
                <value>
                    <fullName>Eastern Computer Exchange</fullName>
                </value>
                <value>
                    <fullName>EchoStor</fullName>
                </value>
                <value>
                    <fullName>Entisys360</fullName>
                </value>
                <value>
                    <fullName>Gotham Technology Group</fullName>
                </value>
                <value>
                    <fullName>Insight Enterprises</fullName>
                </value>
                <value>
                    <fullName>Kovarus</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Computer Services</fullName>
                </value>
                <value>
                    <fullName>LPS Integration</fullName>
                </value>
                <value>
                    <fullName>NXGN</fullName>
                </value>
                <value>
                    <fullName>Par 4 Technology Group</fullName>
                </value>
                <value>
                    <fullName>Precision Computer Services</fullName>
                </value>
                <value>
                    <fullName>Presidio</fullName>
                </value>
                <value>
                    <fullName>Razor Technology</fullName>
                </value>
                <value>
                    <fullName>RoundTower Technologies</fullName>
                </value>
                <value>
                    <fullName>RTP TECHNOLOGY CORPORATION</fullName>
                </value>
                <value>
                    <fullName>Sentinel Technologies</fullName>
                </value>
                <value>
                    <fullName>SHI International</fullName>
                </value>
                <value>
                    <fullName>Sirius Computer Solutions</fullName>
                </value>
                <value>
                    <fullName>SLAIT Consulting</fullName>
                </value>
                <value>
                    <fullName>Softchoice</fullName>
                </value>
                <value>
                    <fullName>SoftwareONE</fullName>
                </value>
                <value>
                    <fullName>SoftwareOne - US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bizible_Medium_Sync__c</fullName>
        <description>Displays the current value for the related lead/account</description>
        <inlineHelpText>Displays the current value for the related lead/account</inlineHelpText>
        <label>Bizible Medium (Sync)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Count__c</fullName>
        <description>Evaluates to 1. Use for reporting to count responses.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Evaluates to 1. Use for reporting to count responses.</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Created_By_Formula__c</fullName>
        <description>Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</description>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows reporting visibility on who created the campaign member. The system field is not exposed in reports. Audit field.</inlineHelpText>
        <label>Created By (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold_On_Create__c</fullName>
        <description>Displays FCCRM Score threshold on create - populated by sync.</description>
        <inlineHelpText>Displays FCCRM Score threshold on create - populated by sync.</inlineHelpText>
        <label>FCCRM Threshold (On Create)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Industry_Formula__c</fullName>
        <description>Displays Industry of related lead or Account.</description>
        <formula>IF( NOT(ISBLANK(ContactId)), text( Contact.Account.Industry),
text(Lead.Industry))</formula>
        <inlineHelpText>Displays Industry of related lead or Account.</inlineHelpText>
        <label>Industry Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Date__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Desc__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Source__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Last_Interesting_Moment_Type__c</fullName>
        <description>Marketo field synced on create from related lead/contact</description>
        <inlineHelpText>Marketo field synced on create from related lead/contact</inlineHelpText>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Lead_Source_Formula__c</fullName>
        <description>displays lead source of related lead/contact. used for reporting because the campaign member field is not available in campaign member field reports.</description>
        <formula>IF( NOT(ISBLANK(ContactId)), text( Contact.LeadSource),
text(Lead.LeadSource))</formula>
        <inlineHelpText>displays lead source of related lead/contact. used for reporting because the campaign member field is not available in campaign member field reports.</inlineHelpText>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Manual_Adjustment_Notes__c</fullName>
        <description>Any administrative notes on the reason for the manual adjustment.</description>
        <inlineHelpText>Any administrative notes on the reason for the manual adjustment.</inlineHelpText>
        <label>Manual Adjustment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field - set to true if you are doing a manual update and want the audit trail</description>
        <inlineHelpText>Administrative field - set to true if you are doing a manual update and want the audit trail</inlineHelpText>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Original_Referrer__c</fullName>
        <description>Displays value for related lead/contact.</description>
        <formula>IF( NOT(ISBLANK(ContactId)), Contact.mkto71_Original_Referrer__c,
Lead.mkto71_Original_Referrer__c)</formula>
        <inlineHelpText>Displays value for related lead/contact.</inlineHelpText>
        <label>Original Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_Original_Source_Type__c</fullName>
        <description>Displays value for related lead/contact.</description>
        <formula>IF( NOT(ISBLANK(ContactId)), Contact.mkto71_Original_Source_Type__c,
Lead.mkto71_Original_Source_Type__c)</formula>
        <inlineHelpText>Displays value for related lead/contact.</inlineHelpText>
        <label>Original Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_SRL_Date__c</fullName>
        <label>SRL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFCR_SRL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Fit with VMT</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not a Stakeholder</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Language Barrier</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>No Longer at Company</fullName>
                </value>
                <value>
                    <fullName>Existing open opportunity</fullName>
                </value>
                <value>
                    <fullName>Ops Cleanup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignMember_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignMember Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Owner_Team_Group_Bucket__c</fullName>
        <formula>Contact.Owner.Team_Group_Buckets__c</formula>
        <label>Campaign Member Owner Team Group Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Owner_Team__c</fullName>
        <description>Pulls in the campaign member&apos;s territory owner team. The formula will first look for the contact&apos;s territory owner team and if that is blank it will then look to the lead territory owner.</description>
        <formula>IF(
NOT(ISBLANK(ContactId)),
TEXT(Contact.Owner.Team__c),
IF(
NOT(ISBLANK(LeadId)),
TEXT(Lead.Owner:User.Team__c),
&quot;N/A&quot;
)
)</formula>
        <label>Campaign Member Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Territory_Owner_Team__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)), 
Contact.Territory_Owner_Team__c, 
IF(NOT(ISBLANK(LeadId)), 
Lead.Territory_Owner_Team__c, 
&quot;N/A&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member Territory Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Territory_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)), 
Contact.Territory_Owner__c, 
IF(NOT(ISBLANK(LeadId)), 
Lead.Territory_Owner__c, 
&quot;N/A&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT(Campaign.Type)</formula>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Title_Name__c</fullName>
        <formula>CompanyOrAccount &amp;  &quot; (&quot; &amp; Title  &amp; &quot;), &quot; &amp; FirstName  &amp;  LastName</formula>
        <label>Company (Title), Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Safe_ID__c</fullName>
        <formula>CASESAFEID(ContactId)</formula>
        <label>Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Adj__c</fullName>
        <formula>IF(ISBLANK(Manual_Create_Date__c),CreatedDate,
IF(DATEVALUE(CreatedDate)=  DATEVALUE(Manual_Create_Date__c), CreatedDate, Manual_Create_Date__c))</formula>
        <label>Created Date (Adj)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dial_Count_On_Create__c</fullName>
        <label>Dial Count (On Create)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dial_Count_On_Update__c</fullName>
        <description>Syncs from lead/contact for all responses on create and syncs on update for active resposnes</description>
        <inlineHelpText>Syncs from lead/contact for all responses on create and syncs on update for active resposnes</inlineHelpText>
        <label>Dial Count (On Update)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_since_Campaign_Create__c</fullName>
        <formula>MAX(Lead.Dial_Count__c, Contact.Dial_Count__c ) - Dial_Count_On_Create__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dials since Campaign Create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Owner_Assigned_Aligned_to_Team_Reg__c</fullName>
        <label>First Owner Assigned Aligned to Team Reg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_Assigned_Team__c</fullName>
        <label>First Owner Assigned Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beast Coast</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>The Green Flash</fullName>
                </value>
                <value>
                    <fullName>Peak Performers</fullName>
                </value>
                <value>
                    <fullName>Closers Club</fullName>
                </value>
                <value>
                    <fullName>The Green Monsters</fullName>
                </value>
                <value>
                    <fullName>Bangers n Cash</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Accounts International</fullName>
                </value>
                <value>
                    <fullName>Global Accounts US</fullName>
                </value>
                <value>
                    <fullName>Spartans</fullName>
                </value>
                <value>
                    <fullName>The Foundation</fullName>
                </value>
                <value>
                    <fullName>The Pack</fullName>
                </value>
                <value>
                    <fullName>Marketing Inbound</fullName>
                </value>
                <value>
                    <fullName>Xccelerators</fullName>
                </value>
                <value>
                    <fullName>Candy Time</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Wheelers and Dealers</fullName>
                </value>
                <value>
                    <fullName>Aussie Posse</fullName>
                </value>
                <value>
                    <fullName>The Minutemen</fullName>
                </value>
                <value>
                    <fullName>Intimidators</fullName>
                </value>
                <value>
                    <fullName>Gravy Train</fullName>
                </value>
                <value>
                    <fullName>VManifest Destiny</fullName>
                </value>
                <value>
                    <fullName>The Ringers</fullName>
                </value>
                <value>
                    <fullName>Virtual Empire</fullName>
                </value>
                <value>
                    <fullName>Green Street Hooligans</fullName>
                </value>
                <value>
                    <fullName>Mount Crushmore</fullName>
                </value>
                <value>
                    <fullName>Pipeline Pitbulls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_Assigned_Velocity_Region__c</fullName>
        <label>First Owner Assigned Velocity Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Owner_Worked_Aligned_to_Team_Reg__c</fullName>
        <label>First Owner Worked Aligned to Team Reg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_Worked_Team__c</fullName>
        <label>First Owner Worked Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beast Coast</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>The Green Flash</fullName>
                </value>
                <value>
                    <fullName>Peak Performers</fullName>
                </value>
                <value>
                    <fullName>Closers Club</fullName>
                </value>
                <value>
                    <fullName>The Green Monsters</fullName>
                </value>
                <value>
                    <fullName>Bangers n Cash</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global Accounts International</fullName>
                </value>
                <value>
                    <fullName>Global Accounts US</fullName>
                </value>
                <value>
                    <fullName>Spartans</fullName>
                </value>
                <value>
                    <fullName>The Foundation</fullName>
                </value>
                <value>
                    <fullName>The Pack</fullName>
                </value>
                <value>
                    <fullName>Marketing Inbound</fullName>
                </value>
                <value>
                    <fullName>Xccelerators</fullName>
                </value>
                <value>
                    <fullName>Candy Time</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Wheelers and Dealers</fullName>
                </value>
                <value>
                    <fullName>Aussie Posse</fullName>
                </value>
                <value>
                    <fullName>The Minutemen</fullName>
                </value>
                <value>
                    <fullName>Intimidators</fullName>
                </value>
                <value>
                    <fullName>Gravy Train</fullName>
                </value>
                <value>
                    <fullName>VManifest Destiny</fullName>
                </value>
                <value>
                    <fullName>The Ringers</fullName>
                </value>
                <value>
                    <fullName>Virtual Empire</fullName>
                </value>
                <value>
                    <fullName>Green Street Hooligans</fullName>
                </value>
                <value>
                    <fullName>Mount Crushmore</fullName>
                </value>
                <value>
                    <fullName>Pipeline Pitbulls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Owner_Worked_Velocity_Region__c</fullName>
        <label>First Owner Worked Velocity Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_call_since_Campaign__c</fullName>
        <formula>IF( 
OR( 
DATETIMEVALUE( Lead.Last_Dial_Date__c ) - DATETIMEVALUE(Campaign.EndDate) &gt; 0, 
DATETIMEVALUE( Contact.Last_Dial_Date__c ) - DATETIMEVALUE(Campaign.EndDate) &gt; 0 
) 
,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up call since Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_email_since_Campaign__c</fullName>
        <formula>IF( 
OR( 
DATETIMEVALUE( Lead.Last_Email_Date__c ) - DATETIMEVALUE(Campaign.EndDate) &gt; 0, 
DATETIMEVALUE( Contact.Last_Email_Date__c ) - DATETIMEVALUE(Campaign.EndDate) &gt; 0 
) 
,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up email since Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_since_Campaign__c</fullName>
        <description>Categorized based on if emailed, called, or both, since date of event</description>
        <formula>IF(

AND(OR( TEXT(Contact.Contact_Status__c)=&quot;Closed&quot; ,Lead_Status__c =&quot;Closed&quot;),OR(Follow_Up_call_since_Campaign__c =&quot;Yes&quot;, Follow_Up_email_since_Campaign__c =&quot;Yes&quot;)),

     &quot;(d) Dispositioned - Called or Emailed&quot;,

IF(

OR(Lead_Status__c =&quot;Closed&quot;,TEXT(Contact.Contact_Status__c)=&quot;Closed&quot;),

     &quot;(e) Dispositioned - No Email or Call&quot;,

IF(

AND(Follow_Up_call_since_Campaign__c =&quot;Yes&quot;, Follow_Up_email_since_Campaign__c =&quot;Yes&quot;),

     &quot;(a) Emailed and Called&quot;,

IF(

Follow_Up_call_since_Campaign__c =&quot;Yes&quot;,

     &quot;(b) Called&quot;,

IF(

Follow_Up_email_since_Campaign__c =&quot;Yes&quot;,

     &quot;(c) Emailed&quot;,

&quot;(e) No Follow Up&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up since Campaign Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Lead__c</fullName>
        <formula>IF(OR(ISPICKVAL(LeadSource, &apos;Inbound - Product Download&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Other&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Webinar&apos;),ISPICKVAL(LeadSource, &apos;Inbound - Website&apos;),ISPICKVAL(LeadSource, &apos;Tradeshow&apos;),ISPICKVAL(LeadSource, &apos;Third Party&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Dial_Date__c</fullName>
        <formula>BLANKVALUE(Contact.Last_Dial_Date__c, Lead.Last_Dial_Date__c)</formula>
        <label>Last Dial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill_Date__c</fullName>
        <description>Syncs on create from related lead/contact for all responses</description>
        <inlineHelpText>Syncs on create from related lead/contact for all responses</inlineHelpText>
        <label>Latest Web Form Fill Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Web_Form_Fill__c</fullName>
        <description>Syncs on create from related lead/contact for all responses</description>
        <inlineHelpText>Syncs on create from related lead/contact for all responses</inlineHelpText>
        <label>Latest Web Form Fill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Account_Status_Current__c</fullName>
        <description>Displays the current value for the related lead</description>
        <formula>IF(ISBLANK(ContactId),Lead.Account_Status__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Account Status (Current)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Safe_ID__c</fullName>
        <formula>CASESAFEID(LeadId)</formula>
        <label>Lead Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.mkto71_Lead_Score__c, 
IF(NOT(ISBLANK(LeadId)),Lead.mkto71_Lead_Score__c, 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>Lead Status (if the campaign member is a lead)</description>
        <formula>TEXT(Lead.Status)</formula>
        <inlineHelpText>Lead Status (if the campaign member is a lead)</inlineHelpText>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_VMT_Score_Current__c</fullName>
        <formula>IF(ISBLANK(ContactId),Lead.VMT_Lead_Score__c,Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead VMT Score (Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQL_Date_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.MQL_Date_Time__c, 
IF(NOT(ISBLANK(LeadId)),Lead.MQL_Date_Time__c, 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <description>MQL From Contact/Lead</description>
        <formula>IF(NOT(ISBLANK(ContactId)),Contact.MQL__c, 
IF(NOT(ISBLANK(LeadId)),Lead.MQL__c, 
FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Create_Date__c</fullName>
        <label>Manual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Hosts_Sync__c</fullName>
        <description>What the number of hosts was when the response was generated or udpated for active responses</description>
        <label>Number of Hosts (Sync)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_VMs_Sync__c</fullName>
        <description>Number of VMs (Sync)</description>
        <inlineHelpText>Number of VMs (Sync)</inlineHelpText>
        <label>Number of VMs (Sync)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_Owner_Team_Aligned_to_Team_Reg__c</fullName>
        <label>SAL Owner Team Aligned to Team Reg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>